examples/aws-gateway-api-controller-lattice/prodcatalogdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prodcatalog
  namespace: workshop
  labels:
    app: prodcatalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prodcatalog
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: prodcatalog
    spec:
      containers:
      - name: prodcatalog
        image: nicksrj/product_catalog:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: http
        livenessProbe:
          httpGet:
            path: /products/ping
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /products/ping
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 3
