examples/aws-gateway-api-controller-lattice/prodcatalogsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prodcatalog
  namespace: workshop
  labels:
    app: prodcatalog
spec:
  type: ClusterIP
  selector:
    app: prodcatalog
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
