examples/aws-gateway-api-controller-lattice/proddetails-lat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proddetail-stable-service
  namespace: workshop
  labels:
    app: proddetail
spec:
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
  selector:
    app: proddetail

---

apiVersion: v1
kind: Service
metadata:
  name: proddetail-canary-service
  namespace: workshop
  labels:
    app: proddetail
spec:
  ports:
    - name: "http"
      port: 3000
      targetPort: 3000
  selector:
    app: proddetail
