examples/aws-gateway-api-controller-lattice/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: latcan-app
spec:
  parentRefs:
  - name: latcansvcnet
    sectionName: http 
  rules:
  - backendRefs:  
    - name: proddetail-stable-service
      namespace: workshop
      kind: Service
      port: 3000
    - name: proddetail-canary-service
      namespace: workshop
      kind: Service
      port: 3000
